// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<DocumentFragment>
  <button
    class="py-2 px-4 font-semibold leading-tight shadow rounded  bg-gray-300 hover:bg-gray-400 text-gray-800"
  >
    <span>
      Buy
    </span>
  </button>
</DocumentFragment>
`;

exports[`renders as default variant 1`] = `
<DocumentFragment>
  <button
    class="py-2 px-4 font-semibold leading-tight shadow rounded  bg-gray-300 hover:bg-gray-400 text-gray-800"
  >
    <span>
      Buy
    </span>
  </button>
</DocumentFragment>
`;

exports[`renders as medium size 1`] = `
<DocumentFragment>
  <button
    class="py-2 px-4 font-semibold leading-tight shadow rounded  bg-gray-300 hover:bg-gray-400 text-gray-800"
  >
    <span>
      Buy
    </span>
  </button>
</DocumentFragment>
`;

exports[`renders as primary variant 1`] = `
<DocumentFragment>
  <button
    class="py-2 px-4 font-semibold leading-tight shadow rounded  bg-teal-500 hover:bg-teal-600 text-white"
  >
    <span>
      Buy
    </span>
  </button>
</DocumentFragment>
`;

exports[`renders as small size 1`] = `
<DocumentFragment>
  <button
    class="py-2 px-4 font-semibold leading-tight shadow rounded text-sm bg-gray-300 hover:bg-gray-400 text-gray-800"
  >
    <span>
      Buy
    </span>
  </button>
</DocumentFragment>
`;
